Thu Jun 18 15:44:35 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/Block_Flushing_Strategy.h:
        * tao/Block_Flushing_Strategy.cpp:
        * tao/Flushing_Strategy.h:
        * tao/Flushing_Strategy.cpp:
        * tao/Transport.cpp:

          Reverted the change from...
          Fri Jun 12 14:29:55 UTC 2009  Adam Mitz  <mitza@ociweb.com>
          ...which made it an error to have a send() return -1/EWOULDBLOCK
          with the blocking flushing strategy.  This is actually expected
          behavior for a server, but it needs to be changed for the blocking
          flusing strategy, see bug #3704, to be resolved after the release.

Tue Jun 16 20:23:44 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_orb_tests.lst:

          Fixed malformed lines (missing space between items).

Tue Jun 16 15:33:24 UTC 2009  William R. Otte  <wotte@dre.vanderbilt.edu>

        * NEWS:

          Updated.

        * TAO_IDL/contrib/mcpp/system.cpp:

          Removed incompatible throw specification.

Tue Jun 16 07:19:07 UTC 2009  Olli Savia  <ops@iki.fi>

        * orbsvcs/tests/EC_Mcast/EC_Mcast.cpp:
          Added return value check for fscanf to silence complation
          warning on Ubuntu 9.04.

Tue Jun 16 07:06:14 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tests/Big_AMI/client.cpp:
        * tests/Crash_On_Write/Crash_Task.cpp:
        * tests/Portable_Interceptors/AMI/client.cpp:
        * tests/Bug_1270_Regression/client.cpp:
        * tests/Bug_1270_Regression/Echo.cpp:
        * tests/Bug_1270_Regression/server.cpp:
        * tests/Bug_1476_Test/test.ior:
        * tao/ORB_Core.cpp:
        * tao/Leader_Follower_Flushing_Strategy.cpp:
        * tao/Messaging/Messaging_Policy_i.cpp:
        * tao/ORB_Core.h:
        * tao/Transport.cpp:

          Reverted all my changes for Bug#3682 and Bug#3697. They need
          more investigation.

Mon Jun 15 19:45:30 UTC 2009  Phil Mesnier  <mesnier_p@ociweb.com>
